--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </li>
         </ul>
       </section>
-      <section <class="experience-section">
+      <section class="experience-section">
         <h2 class="main-menu-title">Чем мы занимаемся</h2>
         <ul class="list experience-list">
           <li class="experience-item">
