--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
         <address>
           <ul class="list ">
             <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
+            <li class="foter-contacts">
               <a class="footer-nav" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <br />
-            <li>
+            
+            <li class="foter-contacts">
               <a class="footer-nav" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
@@ -376,6 +376,7 @@
         </ul>
       </div>
       </div>
+      
       <div class="conteiner">
       <p class="developed" lang="en">2020 | Developed by GoIT Students</p>
       </div>
