правка ошибок в дз

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
           <span class="logo-web">Web</span>
           <span class="logo-studio">Studio</span></a
         >
-
-        <ul class="list nav-main">
-          <li class="nav-item">
-            <a class="list-item" href="./index.html">Студия</a>
-          </li>
-          <li class="nav-item">
-            <a class="list-item" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-item"><a class="list-item" href="">Контакты</a></li>
-        </ul>
-
+        <div class="nav-button-conteiner">
+          <ul class="list nav-main">
+            <li class="nav-item">
+              <a class="list-item" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="list-item" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="list-item" href="">Контакты</a></li>
+          </ul>
+        </div>
         <ul class="list nav-contacts-menu">
           <li class="nav-contacts">
             <a class="contacts" href="mailto:info@devstudio.com"
@@ -50,7 +50,7 @@
         </div>
       </section>
       <div class="conteiner">
-        <section>
+        <section class="first-section">
           <ul class="list second-section">
             <li class="second-section-item">
               <img
@@ -106,8 +106,10 @@
             </li>
           </ul>
         </section>
+      </div>
+      <div class="conteiner">
         <section class="experience-section">
-          <h2 class="main-menu-title">Чем мы занимаемся</h2>
+          <h2 class="second-site-title">Чем мы занимаемся</h2>
           <ul class="list experience-list">
             <li class="experience-item">
               <img
@@ -142,7 +144,7 @@
       <div class="our-team-section">
         <div class="conteiner">
           <section>
-            <h2 class="main-menu-title">Наша команда</h2>
+            <h2 class="second-site-title">Наша команда</h2>
             <ul class="list team-list">
               <li class="team-card">
                 <img
@@ -294,8 +296,8 @@
         </div>
       </div>
       <div class="conteiner">
-        <section>
-          <h2 class="main-menu-title">Постоянные клиенты</h2>
+        <section class="client-section">
+          <h2 class="second-site-title">Постоянные клиенты</h2>
           <ul class="list client-list">
             <li class="client-item">
               <a class="list-item" href=""
@@ -368,16 +370,16 @@
             <span class="logo-studio-foot">Studio</span></a
           >
 
-          <address>
+          <address class="site-address">
             <ul class="list">
               <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="foter-contacts">
+              <li class="footer-contacts">
                 <a class="footer-nav" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
 
-              <li class="foter-contacts">
+              <li class="footer-contacts">
                 <a class="footer-nav" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
@@ -424,7 +426,7 @@
         </div>
       </div>
 
-      <div class="conteiner">
+      <div class="conteiner site-development">
         <p class="developed" lang="en">2020 | Developed by GoIT Students</p>
       </div>
     </footer>
