--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,17 @@
           <span class="logo-web">Web</span>
           <span class="logo-studio">Studio</span></a
         >
-
-        <ul class="list nav-main">
-          <li class="nav-item">
-            <a class="list-item" href="./index.html">Студия</a>
-          </li>
-          <li class="nav-item">
-            <a class="list-item" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-item"><a class="list-item" href="">Контакты</a></li>
-        </ul>
-
+        <div class="nav-button-conteiner">
+          <ul class="list nav-main">
+            <li class="nav-item">
+              <a class="list-item" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="list-item" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item"><a class="list-item" href="">Контакты</a></li>
+          </ul>
+        </div>
         <ul class="list nav-contacts-menu">
           <li class="nav-contacts">
             <a class="contacts" href="mailto:info@devstudio.com"
@@ -40,12 +40,11 @@
         </ul>
       </nav>
     </header>
-    <main class="portfolio-main-menu">
+    <main class="portfolio-main-page">
       <div class="conteiner">
         <h1 class="invisible-title">Страница портфолио</h1>
         <section>
           <ul class="list interactive-menu">
-            <h1 class="invisible-title">Меню</h1>
             <li class="interactive-item">
               <a class="interactive-link" href="">Все</a>
             </li>
@@ -62,89 +61,176 @@
               <a class="interactive-link" href="">Маркетинг</a>
             </li>
           </ul>
-        </section>
-        <section>
+
           <h2 class="invisible-title">Портфолио Меню</h2>
           <ul class="list portfolio-menu">
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic1.jpg" alt="" width="370" height="294" />
-                <h3 class="project">Технокряк</h3>
-                <p class="working">Веб-сайт</p>
-                <p class="project-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic1.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+                <div>
+                  <h3 class="project">Технокряк</h3>
+                  <p class="working">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic2.jpg" alt="" width="370" height="294" />
-                <h3 class="project">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h3>
-                <p class="working">Дизайн</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic2.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h3>
+                  <p class="working">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic3.jpg" alt="" width="370" height="294" />
-                <h3 class="project">Ресторан <span lang="en">Seafood</span></h3>
-                <p class="working">Приложение</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic3.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h3>
+                  <p class="working">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img
-                  class="portfolio-link"
-                  src="./images/pic4.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
-                <h3 class="project">Проект <span lang="en">Prime</span></h3>
-                <p class="working">Маркетинг</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    class="portfolio-link"
+                    src="./images/pic4.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">Проект <span lang="en">Prime</span></h3>
+                  <p class="working">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic5.jpg" alt="" width="370" height="294" />
-                <h3 class="project">Проект <span lang="en">Boxes</span></h3>
-                <p class="working">Приложение</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic5.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">Проект <span lang="en">Boxes</span></h3>
+                  <p class="working">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic6.jpg" alt="" width="370" height="294" />
-                <h3 class="project">
-                  <span lang="en">Inspiration has no Borders</span>
-                </h3>
-                <p class="working">Веб-сайт</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic6.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h3>
+                  <p class="working">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic7.jpg" alt="" width="370" height="294" />
-                <h3 class="project">
-                  Издание <span lang="en">Limited Edition</span>
-                </h3>
-                <p class="working">Дизайн</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic7.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h3>
+                  <p class="working">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic8.jpg" alt="" width="370" height="294" />
-                <h3 class="project">Проект <span lang="en">LAB</span></h3>
-                <p class="working">Маркетинг</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic8.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">Проект <span lang="en">LAB</span></h3>
+                  <p class="working">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-menu-item">
-              <a href=""
-                ><img src="./images/pic9.jpg" alt="" width="370" height="294" />
-                <h3 class="project"><span lang="en">Growing Business</span></h3>
-                <p class="working">Приложение</p></a
-              >
+              <a href="">
+                <div>
+                  <img
+                    src="./images/pic9.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <p class="project-description"></p>
+                </div>
+                <div>
+                  <h3 class="project">
+                    <span lang="en">Growing Business</span>
+                  </h3>
+                  <p class="working">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </section>
@@ -158,16 +244,16 @@
             <span class="logo-studio-foot">Studio</span></a
           >
 
-          <address>
+          <address class="site-address">
             <ul class="list">
               <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-              <li>
+              <li class="footer-contacts">
                 <a class="footer-nav" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
 
-              <li>
+              <li class="footer-contacts">
                 <a class="footer-nav" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
@@ -213,7 +299,8 @@
           </ul>
         </div>
       </div>
-      <div class="conteiner">
+
+      <div class="conteiner site-development">
         <p class="developed" lang="en">2020 | Developed by GoIT Students</p>
       </div>
     </footer>
