правки ширины и кнопок

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,19 +46,19 @@
           <h1 class="invisible-title">Страница портфолио</h1>
           <ul class="list interactive-menu">
             <li class="interactive-item">
-              <a class="interactive-link" href="">Все</a>
+              <button type="button" class="interactive-link">Все</button>
             </li>
             <li class="interactive-item">
-              <a class="interactive-link" href="">Веб-сайты</a>
+              <button type="button" class="interactive-link">Веб-сайты</button>
             </li>
             <li class="interactive-item">
-              <a class="interactive-link" href="">Приложения</a>
+              <button type="button" class="interactive-link">Приложения</button>
             </li>
             <li class="interactive-item">
-              <a class="interactive-link" href="">Дизайн</a>
+              <button type="button" class="interactive-link">Дизайн</button>
             </li>
             <li class="interactive-item">
-              <a class="interactive-link" href="">Маркетинг</a>
+              <button type="button" class="interactive-link">Маркетинг</button>
             </li>
           </ul>
 
